# feather-ai

./: .gitignore  README.md  confluence-api.bru  extract_confluence.py  generate_embeddings.py  pyproject.toml  query.py  store_in_duckdb.py
.dlt/: config.toml  secrets.toml.sample
dbt/: .user.yml  dbt_project.yml  profiles.yml.sample
orchestration/: __init__.py  definitions.py
